--- a/mickey7-nginx/config/html/index.html
+++ b/mickey7-nginx/config/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Expendable Program: Niflheim Colony</title>
+    <title>The Expendable Program: Berkshire Colony</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Rajdhani:wght@400;600&display=swap">
@@ -16,7 +16,7 @@
         <header>
             <div class="logo">
                 <div class="logo-icon"></div>
-                <h1>NIFLHEIM COLONY</h1>
+                <h1>BERKSHIRE COLONY</h1>
             </div>
             <p class="typewriter">Expendable Program Terminal - Authorized Access Only</p>
             <div class="status-bar">
