Wedding Share Installed

--- a/ea-in-bloom/web/index.html
+++ b/ea-in-bloom/web/index.html
@@ -223,10 +223,10 @@
     </a>
 
     <!-- Accent (Brown tone again) -->
-    <a href="#" class="wedding-btn wedding-btn-accent group block">
+    <a href="https://photos.eainbloom.xyz" class="wedding-btn wedding-btn-accent group block">
         <span class="relative z-10 flex items-center justify-center space-x-2">
-            <span>Share Photos (WIP)</span>
-            <span class="text-xl">🚧</span>
+            <span>Share Your Photos with us</span>
+            <span class="text-xl">📸</span>
         </span>
     </a>
 </div>
