--- a/ea-in-bloom/web/index.html
+++ b/ea-in-bloom/web/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>#EAInBloom - Eyitayo & Ayoola's Wedding</title>
+    <title>#EAinBloom - Eyitayo & Ayoola's Wedding</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -196,40 +196,76 @@
                 </div>
             </div>
 
+            <!-- Action Buttons - Visually Balanced Triangle Layout -->
+<div class="max-w-3xl mx-auto mb-16 space-y-6">
+    <!-- Top Button -->
+    <div class="flex justify-center">
+        <a href="https://photos.eainbloom.xyz" class="wedding-btn wedding-btn-accent group block w-full sm:w-auto">
+            <span class="relative z-10 flex items-center justify-center space-x-2">
+                <span>Share Your Wedding Day Photos with us</span>
+                <span class="text-xl">📸</span>
+            </span>
+        </a>
+    </div>
+
+    <!-- Bottom Buttons Row: No empty div, just centered buttons -->
+    <div class="flex justify-center gap-4 flex-wrap">
+        <!-- Gift Us -->
+        <a href="https://gifts.eainbloom.xyz" class="wedding-btn wedding-btn-secondary group">
+            <span class="relative z-10 flex items-center justify-center space-x-2">
+                <span>Gift Us</span>
+                <span class="text-xl">🎁</span>
+            </span>
+        </a>
+
+        <!-- Buy Shares -->
+        <a href="https://cash.eainbloom.xyz" class="wedding-btn wedding-btn-secondary group">
+            <span class="relative z-10 flex items-center justify-center space-x-2">
+                <span>Buy Shares</span>
+                <span class="text-xl">💸</span>
+            </span>
+        </a>
+    </div>
+</div>
+
+
+
             <!-- Action Buttons - No bounding box -->
-<div class="grid grid-cols-1 sm:grid-cols-2 gap-6 md:gap-8 max-w-3xl mx-auto mb-16">
+<!-- <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 md:gap-8 max-w-3xl mx-auto mb-16"> -->
+    <!-- Accent (Brown tone again) -->
+    <!-- <a href="https://photos.eainbloom.xyz" class="wedding-btn wedding-btn-accent group block">
+        <span class="relative z-10 flex items-center justify-center space-x-2">
+            <span>Share Your Wedding Day Photos with us</span>
+            <span class="text-xl">📸</span>
+        </span>
+    </a> -->
+
     <!-- Primary (Gold/Brown) -->
-    <a href="https://rsvp.eainbloom.xyz/form/sBT7YYeC" class="wedding-btn wedding-btn-primary group block">
+    <!-- <a href="https://rsvp.eainbloom.xyz/form/sBT7YYeC" class="wedding-btn wedding-btn-primary group block">
         <span class="relative z-10 flex items-center justify-center space-x-2">
             <span>RSVP</span>
             <span class="transform transition-transform group-hover:translate-x-1">→</span>
         </span>
-    </a>
+    </a> -->
 
     <!-- Accent (Brown tone) -->
-    <a href="https://gifts.eainbloom.xyz" class="wedding-btn wedding-btn-secondary group block">
+    <!-- <a href="https://gifts.eainbloom.xyz" class="wedding-btn wedding-btn-secondary group block">
         <span class="relative z-10 flex items-center justify-center space-x-2">
             <span>Gift Us</span>
             <span class="text-xl">🎁</span>
         </span>
-    </a>
+    </a> -->
 
     <!-- Secondary (Contrast / softer tone) -->
-    <a href="https://cash.eainbloom.xyz" class="wedding-btn wedding-btn-secondary group block">
+    <!-- <a href="https://cash.eainbloom.xyz" class="wedding-btn wedding-btn-secondary group block">
         <span class="relative z-10 flex items-center justify-center space-x-2">
-            <span>Send Money</span>
+            <span>Buy Shares</span>
             <span class="text-xl">💸</span>
         </span>
-    </a>
+    </a> -->
 
-    <!-- Accent (Brown tone again) -->
-    <a href="https://photos.eainbloom.xyz" class="wedding-btn wedding-btn-accent group block">
-        <span class="relative z-10 flex items-center justify-center space-x-2">
-            <span>Share Your Photos with us</span>
-            <span class="text-xl">📸</span>
-        </span>
-    </a>
-</div>
+
+<!-- </div> -->
 
 
             <!-- Footer -->
