--- a/ea-in-bloom/web/index.html
+++ b/ea-in-bloom/web/index.html
@@ -194,19 +194,22 @@
                         —We Bloom
                     </p>
                 </div>
+                <div>
+                    <iframe src="https://suno.com/embed/549b727e-0119-4216-b414-a47cc7c04847" width="760" height="240"><a href="https://suno.com/song/549b727e-0119-4216-b414-a47cc7c04847">Listen on Suno</a></iframe>
+                </div>
             </div>
 
             <!-- Action Buttons - Visually Balanced Triangle Layout -->
 <div class="max-w-3xl mx-auto mb-16 space-y-6">
     <!-- Top Button -->
-    <div class="flex justify-center">
+    <!-- <div class="flex justify-center">
         <a href="https://photos.eainbloom.xyz" class="wedding-btn wedding-btn-accent group block w-full sm:w-auto">
             <span class="relative z-10 flex items-center justify-center space-x-2">
                 <span>Share Your Wedding Day Photos with us</span>
                 <span class="text-xl">📸</span>
             </span>
         </a>
-    </div>
+    </div> -->
 
     <!-- Bottom Buttons Row: No empty div, just centered buttons -->
     <div class="flex justify-center gap-4 flex-wrap">
